########################
# Current Developments #
########################

Work toward next release. Currently under development.

ADDED:

  * Added `cs_ui_config_flags`, including option to automatically view
    explanations when viewing answers, and to highlight the 'view explanation'
    button.

  * Added `cs_user_config`, including option to specify which variable should
    be used for grouping when managing groups.

  * Added `csq_result_as_string` option to `pythoncode` question types,
    allowing the result to come back as a string (useful for custom types as
    return values from `pythoncode` or `pythonic` question types, where
    evaluation would otherwise fail).

  * Added `logread`, `logwrite`, and `logedit` commands for working with log
    entries in a human-readable format.

CHANGED:

  * CAT-SOOP will use date-based versioning moving forward.  Planned regular
    releases are 20XX.9 and 20XX.2 (September and February, corresponding with
    the start of the fall and spring terms at MIT, respectively).

  * Upgraded KaTeX to v0.10.2.

  * Reverted changes to `language` module from 14.0.0.

  * Changed the solution display for the `richtext` question type.

  * `util.read_user_file` now does not raise an exception if there is an error
    in a user's file.  Rather, it always returns a dictionary, but includes
    error information in the case of an error.

  * Logs are now stored in a binary format in order to improve the efficiency
    of reading/writing log entries.

DEPRECATED:

REMOVED:

FIXED:

  * Fix for malformed HTML in `multiexpression` question output.

  * Fix for "preview" in `richtext` question type.

  * Fixed an issue related to complex numbers in the `expression` question
    type.

  * Implemented a fix for the long-standing issue with empty lines in
   `showhide` tags escaping out of them.

  * Fixed an issue with the checker process, whereby submissions would forever