@@ -6,6 +6,9 @@ Work toward next release. Currently under development.
 
 ADDED:
 
+  * Added `.catsoop` as a content file extension, parsed using the same parser
+    as content files with the `.md` extension.
+
   * Added `cs_ui_config_flags`, including option to automatically view
     explanations when viewing answers, and to highlight the 'view explanation'
     button.
